Added reset button as well as extra text below story text

--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
 <body>
     <h1 style="font-size: 56pt">AI-Generated Choose-Your-Own-Adventure</h1>
     <p id="text">Story text</p>
+    <p id="extra" style="font-size: 24px;">What do you do?</p>
     <div id="button-container">
         <button id="choice0">Choice 0</button>
         <button id="choice1">Choice 1</button>
         <button id="choice2">Choice 2</button>
     </div>
+    <button id="reset">Reset</button>
     <script src="cyoa.js"></script>
 </body>
 </html>
