Fixed extra text not reverting once story reset, added title display

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <h1 style="font-size: 56pt">AI-Generated Choose-Your-Own-Adventure</h1>
+    <h2 id="title" style="font-size: 48pt">Story title</h2>
     <p id="text">Story text</p>
     <p id="extra" style="font-size: 24px;">What do you do?</p>
     <div id="button-container">
