Made more user-friendly

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Choose Your Own Adventure</title>
-    <link rel="stylesheet" type="text/css" href="https://yahahama.github.io/AICYOA/cyoa.css">
+    <link rel="stylesheet" type="text/css" href="cyoa.css">
 </head>
 <body>
     <h1 style="font-size: 56pt">AI-Generated Choose-Your-Own-Adventure</h1>
@@ -15,6 +15,6 @@
         <button id="choice2">Choice 2</button>
     </div>
     <button id="reset">Reset</button>
-    <script src="https://yahahama.github.io/AICYOA/cyoa.js"></script>
+    <script src="cyoa.js"></script>
 </body>
 </html>
